Added bootstrap tag for bootstrap-related tasks

--- a/laptops.yml
+++ b/laptops.yml
@@ -2,7 +2,7 @@
 - name: Runs local provisioning steps for a laptop
   hosts: local
   roles:
-    - common
+    - user
     - git
     - dotfiles
   vars:
