Fixed typo in Python role

--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Add Python Deadsnaks PPA
+- name: Add Python Deadsnakes PPA
   apt_repository:
     repo: ppa:deadsnakes/ppa
   become: yes
