--- a/roles/rclone/vars/main.yml
+++ b/roles/rclone/vars/main.yml
@@ -1,3 +1,7 @@
 ---
 rclone:
   deb_url: https://downloads.rclone.org/rclone-current-linux-amd64.deb
+  backups:
+    /etc/fstab: "kmd-backup:/backups/system"
+    /home/kdouglas/.bash_local: "kmd-backup:/backups/system"
+    /home/kdouglas/scripts/: "kmd-backup:/backups/scripts"
