--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -4,3 +4,9 @@
     name: git
     update_cache: yes
   become: yes
+
+- name: Adds .gitignore_global to the global ignore file
+  git_config:
+    name: core.excludesfile
+    scope: global
+    value: "{{ ansible_env.HOME }}/.gitignore_global"
