--- a/workstations.yml
+++ b/workstations.yml
@@ -3,12 +3,13 @@
   hosts:
     - local
   roles:
-    - system-work
-    - git
-    - dotfiles
-    - emacs
-    - python
-    - rclone
+    - {role: 'user', tags: 'user'}
+    - {role: 'system-work', tags: 'system-work'}
+    - {role: 'git', tags: 'git'}
+    - {role: 'dotfiles', tags: 'dotfiles'}
+    - {role: 'emacs', tags: 'emacs'}
+    - {role: 'python', tags: 'python'}
+    - {role: 'rclone', tags: 'rclone'}
   vars:
     - home_dirs:
         opt: opt
