Added org folder to rclone backups

--- a/roles/rclone/vars/main.yml
+++ b/roles/rclone/vars/main.yml
@@ -5,3 +5,4 @@ rclone:
     /etc/fstab: "kmd-backup:/backups/system"
     /home/kdouglas/.bash_local: "kmd-backup:/backups/system"
     /home/kdouglas/scripts/: "kmd-backup:/backups/scripts"
+    /home/kdouglas/org/: "kmd-backup:/backups/org"
