--- a/workstations.yml
+++ b/workstations.yml
@@ -9,6 +9,7 @@
     - {role: 'dotfiles', tags: 'dotfiles'}
     - {role: 'emacs', tags: 'emacs'}
     - {role: 'python', tags: 'python'}
+    - {role: 'go', tags: 'go'}
     - {role: 'rclone', tags: 'rclone'}
     - {role: 'shellcheck', tags: 'shellcheck'}
   vars:
