Added GOPATH to .profile

--- a/roles/go/tasks/main.yml
+++ b/roles/go/tasks/main.yml
@@ -4,6 +4,7 @@
     path: "{{ ansible_env.HOME }}/.profile"
     block: |
       export PATH="$PATH:{{ go.install_dir }}:$HOME/go/bin"
+      export GOPATH="$HOME/go"
 
 
 - name: Install the golint package
