--- a/workstations.yml
+++ b/workstations.yml
@@ -7,6 +7,7 @@
     - {role: 'system-work', tags: 'system-work'}
     - {role: 'git', tags: 'git'}
     - {role: 'dotfiles', tags: 'dotfiles'}
+    - {role: 'tmux', tags: 'tmux'}
     - {role: 'emacs', tags: 'emacs'}
     - {role: 'python', tags: 'python'}
     - {role: 'go', tags: 'go'}
