--- a/common.yml
+++ b/common.yml
@@ -1,17 +1,10 @@
 ---
-- name: Runs local provisioning steps for a laptop
+- name: Installs apps common to all environments
   hosts: local
   roles:
-    - {role: 'user', tags: 'user'}
     - {role: 'git', tags: 'git'}
     - {role: 'dotfiles', tags: 'dotfiles'}
     - {role: 'tmux', tags: 'tmux'}
     - {role: 'emacs', tags: 'emacs'}
     - {role: 'python', tags: 'python'}
     - {role: 'shellcheck', tags: 'shellcheck'}
-  vars:
-    - home_dirs:
-        opt: opt
-        src: src
-        venvs: venvs
-    - username: kmdouglass
