--- a/home.yml
+++ b/home.yml
@@ -8,3 +8,9 @@
 
 - name: Installs apps common to all environments
   import_playbook: common.yml
+
+- name: Installs apps for home
+  hosts:
+    - local
+  roles:
+    - {role: 'rust', tags: 'rust'}
