--- a/roles/system-work/tasks/main.yml
+++ b/roles/system-work/tasks/main.yml
@@ -22,3 +22,10 @@
       //10.42.10.14/dev /mnt/synology1/dev cifs vers=1.0,credentials=/home/kdouglas/.smbcredentials,sfu,mfsymlinks,file_mode=0777,dir_mode=0777,iocharset=utf8,sec=ntlm,_netdev 0 0
       //10.42.10.14/data /mnt/synology1/data cifs vers=1.0,credentials=/home/kdouglas/.smbcredentials,iocharset=utf8,sec=ntlm,_netdev 0 0
   become: yes
+
+- name: Backup password store
+  cron:
+    name: "backup passwords"
+    minute: "0"
+    hour: "12"
+    job: "cp -r {{ansible_env.HOME}}/.password-store /mnt/Data/backups"
