--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -20,3 +20,16 @@
     path: "{{ ansible_env.HOME }}/{{ emacs.src_dir | basename }}"
     src: "{{ emacs.src_dir }}"
     state: link
+
+- name: Copy the emacsd unit file to systemd's configuration directory
+  copy:
+    src: emacsd.service
+    dest: "{{ ansible_env.HOME }}/.config/systemd/user/"
+
+- name: Launch the emacs server at startup
+  systemd:
+    name: emacsd
+    daemon-reload: yes
+    state: started
+    scope: user
+    
